Put some actually, possibly, useful information in the pages

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,11 +5,15 @@ color: black
 style: center
 ---
 
-<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
-  <i class="fa fa-circle fa-stack-2x text-white"></i>
-  <i class="fa fa-music fa-stack-1x text-purple"></i>
-</span>
+<h1>
+  <div class="subtlecircle sectiondivider-big">
+	  <img src="img/spectrum_stripe.png" alt="TZX to WAV Convertor" title="TZX to WAV Convertor" style="padding:0 10px;" />
+    </div>
+	  <span class="inlineblock">TZX.js</span>
+</h1>
 
+### A Javascript library (and command-line tool via node) to convert tzx (and TAP) files to audio output
+{: .text-blue}
 
 <span id="forkongithub">
   <a href="{{ site.source_link }}" class="bg-blue">
