--- a/_posts/2000-01-02-details.md
+++ b/_posts/2000-01-02-details.md
@@ -1,9 +1,119 @@
 ---
-title: "setup details"
+title: "Usage"
 bg: orange
 color: black
 fa-icon: question-circle
 ---
+
+## Basic Usage
+
+This is a javascript API that depends on [wav.js](http://kmp1.github.io/wav.js/) (well, anything that implements a similar interface - specifically it only cares about the frequency property and addSample).  This is a simple example to get you started that will get a byte array containing wav data from an input byte array containing tzx data:
+
+	var tzxFile = []; // Fill this up with bytes
+
+	var wave = wav_js.create(1, 44100, wav_js.BitSize.EIGHT);
+	var details = tzx_js.convertTzxToAudio(tzx_js.MachineSettings.ZXSpectrum48, {
+		length: tzxFile.length,
+		getByte: function(index) {
+			return tzxFile[index];
+		}
+	}, wave);
+	var rawWaveData = wave.toByteArray(); // Here we have the byte array
+
+So I'll let you head on over to [wav.js](http://kmp1.github.io/wav.js/) to figure out the arguments to the create function on wav_js but briefly it means generate a wav file that is mono, 44.1kHz with 8 bits per sample.
+
+The slightly wrinkly bit is the convertTzxToAudio function - this takes:
+
+- An object that describes a machine (see MachineSettings for some pre-canned machines) that is going to receieve the audio input.
+- An object that has a length property and a getByte function (that takes a single argument, the index) which should wrap up the input data - you'll see why I did this in the bit about using in a web browser.
+- An object that implements the wav.js interface
+
+Finally I'm sure you can guess what toByteArray does.
+
+There are two useful top-level functions available in the tzx_js module:
+
+- convertTzxToAudio - Converts a TZX file to audio output
+- convertTapToAudio - Converts a TAP file to audio output
+
+## Using in a Web Application
+
+It is perfectly possible to use this in even an old web browser (as I carefully avoided dealing with reading in a file and writing out a file), here is an example:
+
+	<!DOCTYPE html>
+	<html>
+	<head>
+	<script type="text/javascript" src="FileSaver.js"></script>
+	<script type="text/javascript" src="Blob.js"></script>
+	<script type="text/javascript" src="wav.js"></script>
+	<script type="text/javascript" src="tzx.js"></script>
+	<script type="text/javascript">
+
+	function downloadTzx(fileToConvert, downloadFileName, machineSettings) {
+
+	    var req = new XMLHttpRequest();
+	    req.overrideMimeType('text\/plain; charset=x-user-defined');
+
+	    req.onreadystatechange = function () {
+	        var done = this.done || 4;
+	        if (this.readyState === done){
+	            if (req.status === 200) {
+	            	var settings = tzx_player.MachineSettings.ZXSpectrum48;
+	                var wave = wav_js.create(1, 44100, wav_js.BitSize.EIGHT);
+	                var details = tzx_player.convertTzxToAudio(settings, {
+	                    length: req.responseText.length,
+	                    getByte: function(index) {
+	                        // throw away high-order byte (f7)
+	                        return req.responseText.charCodeAt(index) & 0xff;
+	                    }
+	                }, wave);
+	                var rawWaveData = wave.toByteArray();
+
+	                saveAs(new Blob([new Uint8Array(rawWaveData)],
+	                    {type : 'application/octet-binary'}),
+	                    downloadFileName);
+
+	                alert("Successfully converted '" + fileToConvert + "' to '" + downloadFileName
+	                    + "' - TZX file is version: " + details.majorVersion + "."
+	                    + details.minorVersion + " and has " + details.blocks.length + " blocks.");
+	        }
+	    };
+
+	    req.open('GET', fileToConvert, true);
+	    req.send(null);
+	}
+	</script>
+	<body>
+	    <a href="javascript:downloadTzx('data/simple.tzx', 'simple.tzx_MY_ATTEMPT.wav', tzx_player.MachineSettings.ZXSpectrum48)">Download a Game</a>
+	</body>
+	</html>
+
+You can see that I used the excellant [Blob.js](https://github.com/eligrey/Blob.js) and [FileSaver.js](https://github.com/eligrey/FileSaver.js) libraries.  They provide the saveAs functionality and require a reasonably modern browser (notice I'm using a Uint8Array there).
+
+There are also alternate ways, of course, to get the data but I chose an approach that should work on some really old browsers (with a bit of [ActiveX](http://en.wikipedia.org/wiki/ActiveX) [magic](http://www.w3schools.com/ajax/ajax_xmlhttprequest_create.asp) you could even get this going on [IE6](http://en.wikipedia.org/wiki/Internet_Explorer_6))
+
+## Using from Node JS
+
+Using it from [nodejs](http://nodejs.org/) is pretty straightforward, you have probably figured this out already but this should do the trick:
+
+	var fs = require('fs');
+	var constants = require('constants');
+	var wav_js = require("/Users/kevin/Projects/wav.js/master/src/wav.js");
+	var tzx_js = require("/Users/kevin/Projects/tzx.js/master/src/tzx.js");
+
+	var file = fs.readFileSync("input.tzx");
+	var wave = wav_js.create(1, 44100, wav_js.BitSize.EIGHT);
+
+	// Do nothing clever here, just wrap up the array
+	var inputConvert = {
+		length: file.length,
+		getByte: function(index) {
+			return file[index];
+		}
+	};
+
+	var details = tzx_js.convertTzxToAudio(tzx_js.MachineSettings.ZXSpectrum48, inputConvert, wave);
+
+	fs.writeFileSync("output.wav", new Buffer(wave.toByteArray()));
 
 
 
