--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -12,7 +12,7 @@ style: center
 	  <span class="inlineblock">TZX.js</span>
 </h1>
 
-### A Javascript library (and command-line tool via node) to convert tzx (and TAP) files to audio output
+### A Javascript library (and command-line tool via node) to convert TZX (and TAP) files to audio output
 {: .text-blue}
 
 <span id="forkongithub">
