Array can now be passed in directly

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -12,21 +12,17 @@ This is a javascript API that depends on [wav.js](http://kmp1.github.io/wav.js/)
 	var tzxFile = []; // Fill this up with bytes
 
 	var wave = wav_js.create(1, 44100, wav_js.BitSize.EIGHT);
-	var details = tzx_js.convertTzxToAudio(tzx_js.MachineSettings.ZXSpectrum48, {
-		length: tzxFile.length,
-		getByte: function(index) {
-			return tzxFile[index];
-		}
-	}, wave);
+	var details = tzx_js.convertTzxToAudio(tzx_js.MachineSettings.ZXSpectrum48,
+		tzxFile, wave);
 	var rawWaveData = wave.toByteArray(); // Here we have the byte array
 
 So I'll let you head on over to [wav.js](http://kmp1.github.io/wav.js/) to figure out the arguments to the create function on wav_js but briefly it means generate a wav file that is mono, 44.1kHz with 8 bits per sample.
 
-The slightly wrinkly bit is the convertTzxToAudio function - this takes:
+We call the convertTzxToAudio function with the following arguments:
 
 - An object that describes a machine (see MachineSettings for some pre-canned machines) that is going to receieve the audio input.
-- An object that has a length property and a getByte function (that takes a single argument, the index) which should wrap up the input data - you'll see why I did this in the bit about using in a web browser.
-- An object that implements the wav.js interface
+- An object that has a getLength and getByte function (that takes a single argument, the index) which should wrap up the input data or a good ol' array - in the example above you can see the array approach (see the web example for why you might need to pass in something different).
+- An object that implements the wav.js interface (just a frequency property and an addSample function)
 
 Finally I'm sure you can guess what toByteArray does.
 
@@ -60,7 +56,7 @@ It is perfectly possible to use this in even an old web browser (as I carefully 
 	            	var settings = tzx_player.MachineSettings.ZXSpectrum48;
 	                var wave = wav_js.create(1, 44100, wav_js.BitSize.EIGHT);
 	                var details = tzx_player.convertTzxToAudio(settings, {
-	                    length: req.responseText.length,
+	                    getLength: function() { return req.responseText.length; },
 	                    getByte: function(index) {
 	                        // throw away high-order byte (f7)
 	                        return req.responseText.charCodeAt(index) & 0xff;
@@ -103,15 +99,7 @@ Using it from [nodejs](http://nodejs.org/) is pretty straightforward, you have p
 	var file = fs.readFileSync("input.tzx");
 	var wave = wav_js.create(1, 44100, wav_js.BitSize.EIGHT);
 
-	// Do nothing clever here, just wrap up the array
-	var inputConvert = {
-		length: file.length,
-		getByte: function(index) {
-			return file[index];
-		}
-	};
-
-	var details = tzx_js.convertTzxToAudio(tzx_js.MachineSettings.ZXSpectrum48, inputConvert, wave);
+	var details = tzx_js.convertTzxToAudio(tzx_js.MachineSettings.ZXSpectrum48, file, wave);
 
 	fs.writeFileSync("output.wav", new Buffer(wave.toByteArray()));
 
