Changed the internal name to just wav instead of wav_js - the _js seems unnecessary

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -11,12 +11,12 @@ This is a javascript API that depends on [wav.js](http://kmp1.github.io/wav.js/)
 
 	var tzxFile = []; // Fill this up with bytes
 
-	var wave = wav_js.create(1, 44100, wav_js.BitSize.EIGHT);
-	var details = tzx_js.convertTzxToAudio(tzx_js.MachineSettings.ZXSpectrum48,
+	var wave = wav.create(1, 44100, wav.BitSize.EIGHT);
+	var details = tzx.convertTzxToAudio(tzx.MachineSettings.ZXSpectrum48,
 		tzxFile, wave);
 	var rawWaveData = wave.toByteArray(); // Here we have the byte array
 
-So I'll let you head on over to [wav.js](http://kmp1.github.io/wav.js/) to figure out the arguments to the create function on wav_js but briefly it means generate a wav file that is mono, 44.1kHz with 8 bits per sample.
+So I'll let you head on over to [wav.js](http://kmp1.github.io/wav.js/) to figure out the arguments to the create function on wav but briefly it means generate a wav file that is mono, 44.1kHz with 8 bits per sample.
 
 We call the convertTzxToAudio function with the following arguments:
 
@@ -26,7 +26,7 @@ We call the convertTzxToAudio function with the following arguments:
 
 Finally I'm sure you can guess what toByteArray does.
 
-There are two useful top-level functions available in the tzx_js module:
+There are two useful top-level functions available in the tzx module:
 
 - convertTzxToAudio - Converts a TZX file to audio output
 - convertTapToAudio - Converts a TAP file to audio output
@@ -54,7 +54,7 @@ It is perfectly possible to use this in even an old web browser (as I carefully 
 	        if (this.readyState === done){
 	            if (req.status === 200) {
 	            	var settings = tzx_player.MachineSettings.ZXSpectrum48;
-	                var wave = wav_js.create(1, 44100, wav_js.BitSize.EIGHT);
+	                var wave = wav.create(1, 44100, wav.BitSize.EIGHT);
 	                var details = tzx_player.convertTzxToAudio(settings, {
 	                    getLength: function() { return req.responseText.length; },
 	                    getByte: function(index) {
@@ -93,13 +93,13 @@ Using it from [nodejs](http://nodejs.org/) is pretty straightforward, you have p
 
 	var fs = require('fs');
 	var constants = require('constants');
-	var wav_js = require("/Users/kevin/Projects/wav.js/master/src/wav.js");
-	var tzx_js = require("/Users/kevin/Projects/tzx.js/master/src/tzx.js");
+	var wav = require("/Users/kevin/Projects/wav.js/master/src/wav.js");
+	var tzx = require("/Users/kevin/Projects/tzx.js/master/src/tzx.js");
 
 	var file = fs.readFileSync("input.tzx");
-	var wave = wav_js.create(1, 44100, wav_js.BitSize.EIGHT);
+	var wave = wav.create(1, 44100, wav.BitSize.EIGHT);
 
-	var details = tzx_js.convertTzxToAudio(tzx_js.MachineSettings.ZXSpectrum48, file, wave);
+	var details = tzx.convertTzxToAudio(tzx.MachineSettings.ZXSpectrum48, file, wave);
 
 	fs.writeFileSync("output.wav", new Buffer(wave.toByteArray()));
 
