Corrected code sample

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -53,9 +53,9 @@ It is perfectly possible to use this in even an old web browser (as I carefully 
 	        var done = this.done || 4;
 	        if (this.readyState === done){
 	            if (req.status === 200) {
-	            	var settings = tzx_player.MachineSettings.ZXSpectrum48;
+	            	var settings = tzx.MachineSettings.ZXSpectrum48;
 	                var wave = wav.create(1, 44100, wav.BitSize.EIGHT);
-	                var details = tzx_player.convertTzxToAudio(settings, {
+	                var details = tzx.convertTzxToAudio(settings, {
 	                    getLength: function() { return req.responseText.length; },
 	                    getByte: function(index) {
 	                        // throw away high-order byte (f7)
@@ -69,8 +69,8 @@ It is perfectly possible to use this in even an old web browser (as I carefully 
 	                    downloadFileName);
 
 	                alert("Successfully converted '" + fileToConvert + "' to '" + downloadFileName
-	                    + "' - TZX file is version: " + details.majorVersion + "."
-	                    + details.minorVersion + " and has " + details.blocks.length + " blocks.");
+	                    + "' - TZX file is version: " + details.version.major + "."
+	                    + details.version.minor + " and has " + details.blocks.length + " blocks.");
 	        }
 	    };
 
@@ -79,7 +79,7 @@ It is perfectly possible to use this in even an old web browser (as I carefully 
 	}
 	</script>
 	<body>
-	    <a href="javascript:downloadTzx('data/simple.tzx', 'simple.tzx_MY_ATTEMPT.wav', tzx_player.MachineSettings.ZXSpectrum48)">Download a Game</a>
+	    <a href="javascript:downloadTzx('data/simple.tzx', 'simple.tzx_MY_ATTEMPT.wav', tzx.MachineSettings.ZXSpectrum48)">Download a Game</a>
 	</body>
 	</html>
 
