--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -11,7 +11,7 @@ This is a javascript API that depends on [wav.js](http://kmp1.github.io/wav.js/)
 
 	var tzxFile = []; // Fill this up with bytes
 
-	var wave = wav.create(1, 44100, wav.BitSize.EIGHT);
+	var wave = wav.create(1, 44100, wav.SampleSize.EIGHT);
 	var details = tzx.convertTzxToAudio(tzx.MachineSettings.ZXSpectrum48,
 		tzxFile, wave);
 	var rawWaveData = wave.toByteArray(); // Here we have the byte array
@@ -54,7 +54,7 @@ It is perfectly possible to use this in even an old web browser (as I carefully 
 	        if (this.readyState === done){
 	            if (req.status === 200) {
 	            	var settings = tzx.MachineSettings.ZXSpectrum48;
-	                var wave = wav.create(1, 44100, wav.BitSize.EIGHT);
+	                var wave = wav.create(1, 44100, wav.SampleSize.EIGHT);
 	                var details = tzx.convertTzxToAudio(settings, {
 	                    getLength: function() { return req.responseText.length; },
 	                    getByte: function(index) {
@@ -97,11 +97,40 @@ Using it from [nodejs](http://nodejs.org/) is pretty straightforward, you have p
 	var tzx = require("/Users/kevin/Projects/tzx.js/master/src/tzx.js");
 
 	var file = fs.readFileSync("input.tzx");
-	var wave = wav.create(1, 44100, wav.BitSize.EIGHT);
+	var wave = wav.create(1, 44100, wav.SampleSize.EIGHT);
 
 	var details = tzx.convertTzxToAudio(tzx.MachineSettings.ZXSpectrum48, file, wave);
 
 	fs.writeFileSync("output.wav", new Buffer(wave.toByteArray()));
+
+## Note About STOP-THE-TAPE
+
+So some TZX files contain "stop the tape" directives, meaning, well, what it says.  The tzx.js API will deal with this by calling the function **stopTheTapeTrigger** on the output argument (in all the examples so far a wav.js WaveFile object returned from the create function).  You will need to do something with this, the tzx command-line tool just puts a number on the end of the wav file and saves it, then creates a new one so you will get a bunch of .wav files generated for such a tzx file, thus giving the user the chance to stop the tape.  This is a little snippet of code that does that:
+
+	var output = "my_wave.wav";
+	var wave = wav.create(1, 44100, wav.SampleSize.EIGHT);
+	var splitFileCount = 0;
+	var outputWrapper = {
+	    addSample: wave.addSample,
+	    getFrequency: wave.getFrequency,
+	    stopTheTapeTrigger: function () {
+
+	        splitFileCount += 1;
+
+	        // Tack a number on the end of the file name
+	        var newFile;
+	        if (output.lastIndexOf('.wav') !== -1) {
+	            newFile = output.substr(0, output.lastIndexOf('.')) + '_' + splitFileCount + '.wav';
+	        } else {
+	            newFile = output + '_' + splitFileCount;
+	        }
+
+	        // Write the old file and create a new one for the next part
+	        fs.writeFileSync(newFile, new Buffer(wave.toByteArray()));
+	        wave = wav.create(1, 44100, wav.SampleSize.EIGHT);
+	    }
+	};
+
 
 
 
