Improved the sub-heading

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -12,8 +12,10 @@ style: center
 	  <span class="inlineblock">TZX.js</span>
 </h1>
 
-### A Javascript library (and command-line tool via node) to convert TZX (and TAP) files to audio output so now you can use your computer as a cassette player!
+### A Javascript library (and command-line tool via node) to convert TZX (and TAP) files to audio output
 {: .text-blue}
+
+...so now you can use your computer as a cassette player!
 
 <span id="forkongithub">
   <a href="{{ site.source_link }}" class="bg-blue">
