updated the node example

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -97,9 +97,15 @@ Using it from [nodejs](http://nodejs.org/) is pretty straightforward, you have p
 	var tzx = require("/Users/kevin/Projects/tzx.js/master/src/tzx.js");
 
 	var file = fs.readFileSync("input.tzx");
+	var tzxFile = {
+		getLength: function() { return file.length; },
+		getByte: function(index) {
+			return file[index];
+		}
+	};
 	var wave = wav.create(1, 44100, wav.SampleSize.EIGHT);
 
-	var details = tzx.convertTzxToAudio(tzx.MachineSettings.ZXSpectrum48, file, wave);
+	var details = tzx.convertTzxToAudio(tzx.MachineSettings.ZXSpectrum48, tzxFile, wave);
 
 	fs.writeFileSync("output.wav", new Buffer(wave.toByteArray()));
 
