Updated to mention getSampleSize

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -119,6 +119,7 @@ So some TZX files contain "stop the tape" directives, meaning, well, what it say
 	var outputWrapper = {
 	    addSample: wave.addSample,
 	    getFrequency: wave.getFrequency,
+	    getSampleSize: wave.getSampleSize,
 	    stopTheTapeTrigger: function () {
 
 	        splitFileCount += 1;
