Corrected properties to functions in description

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -21,8 +21,8 @@ So I'll let you head on over to [wav.js](http://kmp1.github.io/wav.js/) to figur
 We call the convertTzxToAudio function with the following arguments:
 
 - An object that describes a machine (see MachineSettings for some pre-canned machines) that is going to receieve the audio input.
-- An object that has a getLength and getByte function (that takes a single argument, the index) which should wrap up the input data or a good ol' array - in the example above you can see the array approach (see the web example for why you might need to pass in something different).
-- An object that implements the wav.js interface (just a frequency property and an addSample function)
+- An object that has a getLength and getByte function (that takes a single argument, the index) which should wrap up the input data or a good ol' array - in the example above you can see the array approach (see the web example for why you might need to pass in something different - also some tzx files require stop-the-tape functionality - see information below).
+- An object that implements the wav.js interface (just a getFrequency, getChannelCount and addSample functions)
 
 Finally I'm sure you can guess what toByteArray does.
 
@@ -33,7 +33,7 @@ There are two useful top-level functions available in the tzx module:
 
 ## Using in a Web Application
 
-It is perfectly possible to use this in even an old web browser (as I carefully avoided dealing with reading in a file and writing out a file), here is an example:
+It is perfectly possible to use this even in an old web browser (as I avoided dealing with reading in a file and writing out a file), here is an example:
 
 	<!DOCTYPE html>
 	<html>
