Corrected properties to functions in description

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -22,7 +22,7 @@ We call the convertTzxToAudio function with the following arguments:
 
 - An object that describes a machine (see MachineSettings for some pre-canned machines) that is going to receieve the audio input.
 - An object that has a getLength and getByte function (that takes a single argument, the index) which should wrap up the input data or a good ol' array - in the example above you can see the array approach (see the web example for why you might need to pass in something different - also some tzx files require stop-the-tape functionality - see information below).
-- An object that implements the wav.js interface (just a getFrequency, getChannelCount and addSample functions)
+- An object that implements the wav.js interface (just getFrequency, getChannelCount and addSample functions)
 
 Finally I'm sure you can guess what toByteArray does.
 
