Corrected properties to functions in description

--- a/_posts/2000-01-03-details.md
+++ b/_posts/2000-01-03-details.md
@@ -51,27 +51,29 @@ It is perfectly possible to use this even in an old web browser (as I avoided de
 
 	    req.onreadystatechange = function () {
 	        var done = this.done || 4;
-	        if (this.readyState === done){
-	            if (req.status === 200) {
-	            	var settings = tzx.MachineSettings.ZXSpectrum48;
-	                var wave = wav.create(1, 44100, wav.SampleSize.EIGHT);
-	                var details = tzx.convertTzxToAudio(settings, {
-	                    getLength: function() { return req.responseText.length; },
-	                    getByte: function(index) {
-	                        // throw away high-order byte (f7)
-	                        return req.responseText.charCodeAt(index) & 0xff;
-	                    }
-	                }, wave);
-	                var rawWaveData = wave.toByteArray();
 
-	                saveAs(new Blob([new Uint8Array(rawWaveData)],
-	                    {type : 'application/octet-binary'}),
-	                    downloadFileName);
+	        if (this.readyState === done && req.status === 200){
 
-	                alert("Successfully converted '" + fileToConvert + "' to '" + downloadFileName
-	                    + "' - TZX file is version: " + details.version.major + "."
-	                    + details.version.minor + " and has " + details.blocks.length + " blocks.");
-	        }
+                var wave = wav.create(1, 44100, wav.SampleSize.EIGHT);
+
+                var details = tzx.convertTzxToAudio(machineSettings, {
+                    getLength: function() { return req.responseText.length; },
+                    getByte: function(index) {
+                        // throw away high-order byte (f7)
+                        return req.responseText.charCodeAt(index) & 0xff;
+                    }
+                }, wave);
+
+                var rawWaveData = wave.toByteArray();
+
+                // See NOTE below about this
+                saveAs(new Blob([new Uint8Array(rawWaveData)],
+                    {type : 'application/octet-binary'}),
+                    downloadFileName);
+
+                alert("Successfully converted '" + fileToConvert + "' to '" + downloadFileName
+                    + "' - TZX file is version: " + details.version.major + "."
+                    + details.version.minor + " and has " + details.blocks.length + " blocks.");
 	    };
 
 	    req.open('GET', fileToConvert, true);
@@ -79,11 +81,11 @@ It is perfectly possible to use this even in an old web browser (as I avoided de
 	}
 	</script>
 	<body>
-	    <a href="javascript:downloadTzx('data/simple.tzx', 'simple.tzx_MY_ATTEMPT.wav', tzx.MachineSettings.ZXSpectrum48)">Download a Game</a>
+	    <a href="javascript:downloadTzx('data/example.tzx', 'example.wav', tzx.MachineSettings.ZXSpectrum48)">Download a Game</a>
 	</body>
 	</html>
 
-You can see that I used the excellant [Blob.js](https://github.com/eligrey/Blob.js) and [FileSaver.js](https://github.com/eligrey/FileSaver.js) libraries.  They provide the saveAs functionality and require a reasonably modern browser (notice I'm using a Uint8Array there).
+**NOTE** You can see that I used the excellant [Blob.js](https://github.com/eligrey/Blob.js) and [FileSaver.js](https://github.com/eligrey/FileSaver.js) libraries.  They provide the saveAs functionality and require a reasonably modern browser (notice I'm using a Uint8Array there).
 
 There are also alternate ways, of course, to get the data but I chose an approach that should work on some really old browsers (with a bit of [ActiveX](http://en.wikipedia.org/wiki/ActiveX) [magic](http://www.w3schools.com/ajax/ajax_xmlhttprequest_create.asp) you could even get this going on [IE6](http://en.wikipedia.org/wiki/Internet_Explorer_6))
 
